# odd-snap

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  OddSnap.sln  README.md  RELEASE_NOTES.md  SECURITY.md  Yoink.sln
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  publish-winget.yml  release.yml  rust-rewrite.yml
crates/oddsnap-app/: Cargo.toml
crates/oddsnap-app/src/: actions.rs  annotation_compositor.rs  annotation_workspace.rs  hotkeys.rs  image_search.rs  main.rs  media_history.rs  ocr_translation.rs  processed_preview.rs  settings_text.rs  sticker_upscale.rs  ui.rs  ui_shell.rs
crates/oddsnap-core/: Cargo.toml
crates/oddsnap-core/src/: annotations.rs  capabilities.rs  filename_template.rs  history.rs  image_search.rs  jobs.rs  lib.rs  media.rs  native_ui.rs  ocr.rs  scan.rs  scroll_capture.rs  settings.rs  sticker_upscale.rs  translation.rs  update.rs  upload.rs
crates/oddsnap-migrate/: Cargo.toml
crates/oddsnap-migrate/src/: lib.rs
crates/oddsnap-platform/: Cargo.toml
crates/oddsnap-platform-linux/: Cargo.toml
crates/oddsnap-platform-linux/src/: lib.rs
crates/oddsnap-platform-macos/: Cargo.toml
crates/oddsnap-platform-macos/src/: lib.rs
crates/oddsnap-platform-windows/: Cargo.toml
crates/oddsnap-platform-windows/src/: lib.rs
crates/oddsnap-platform/src/: lib.rs
docs/: CHANGELOG.md  changelog.html  donate.html  downloads.html  index.html  macos-readiness.md  reliability-maintenance-log.md  rust-gpui-architecture.md  rust-packaging-readiness.md  rust-release-decision.md  rust-rewrite-parity.md  rust-rewrite-todo.md  style.css
docs/assets/: icons-DgulSfLQ.js  icons-ePNiNwdD.js  icons-qKtL06zr.js  index-6Q99LI0q.js  index-AcwnyHYZ.css  index-B076jWC7.css  index-B27Ikswt.js  index-BCkbPa30.js  index-BUTYx84R.js  index-BVhVgPzA.css  index-BWf9NV0_.js  index-BXKUKIKy.js  index-BeNrdcjN.css  index-BgrQsae-.js  index-BikjSZuK.css  index-Bj-II9Xk.js  index-BrnTgwaM.js  index-C10M1rqM.js  index-C1Qqg9fg.css  index-C8D_tJrW.js  index-CBIiczO_.js  index-CHmP-z41.css  index-CLp_e6mQ.css  index-CUYeShbA.css  index-CXsSStjC.css  index-CffQ72Gd.js  index-CgIGsNna.css  index-Co-Ss2b3.css  index-ConJJcQA.css  index-CtkLBrhG.js  index-Cy1TAakd.css  index-D6auY-Qr.js  index-DQwn00_j.css  index-DRDFF94F.js  index-DTDfFb5o.js  index-DcDhLOot.css  index-ExV2UcOk.js  index-GodYL6X7.js  index-IlxMsTLn.css  index-OZQQ5JWC.js  (+19 more)
packaging/macos/: Info.plist
scripts/linux/: package-oddsnap-rust.sh
scripts/macos/: package-oddsnap-rust.sh
scripts/windows/: package-oddsnap-rust.ps1
scripts/winget/: New-WingetManifests.ps1  README.md
site/: components.json  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
site/scripts/: clean-docs-output.mjs  normalize-docs-index.mjs
site/src/: index.css  main.tsx
site/src/components/: DitheringShader.tsx  Layout.tsx  PageIntro.tsx  StarChart.tsx
site/src/hooks/: useReleases.ts  useStarCount.ts
site/src/lib/: github.ts
site/src/pages/: Changelog.tsx  Donate.tsx  Downloads.tsx  Home.tsx  Hotkeys.tsx  NotFound.tsx  Privacy.tsx
site/src/types/: github.ts  hugeicons.d.ts
src/OddSnap/: App.xaml  App.xaml.cs  OddSnap.csproj  app.manifest
src/OddSnap.AppModel/: OddSnap.AppModel.csproj
src/OddSnap.AppModel/Jobs/: AppJobModels.cs
src/OddSnap.AppModel/Settings/: SettingsSchemaCatalog.cs  SettingsSchemaModels.cs
src/OddSnap.WinUI/: App.xaml  App.xaml.cs  Imports.cs  OddSnap.WinUI.csproj  OddSnap.WinUI.slnx  Package.appxmanifest  app.manifest
src/OddSnap.WinUI/Properties/: launchSettings.json
src/OddSnap.WinUI/Views/: MainPage.xaml  MainPage.xaml.cs
src/OddSnap/App/: App.Capture.Handlers.cs  App.Capture.cs  App.Hotkeys.cs  App.Lifecycle.cs  App.Shutdown.cs  App.Startup.cs  App.Upload.cs
src/OddSnap/Capture/: CaptureEscapeKeyHook.cs  CaptureMagnifierHelper.cs  CaptureOverlayHotPathWarmup.cs  (+37 more)
src/Yoink/: App.Capture.Handlers.cs  App.Capture.cs  App.Hotkeys.cs  App.Lifecycle.cs  App.Upload.cs  App.xaml  App.xaml.cs  Yoink.csproj
src/Yoink.AppModel/: Yoink.AppModel.csproj
src/Yoink.WinUI/: App.xaml  App.xaml.cs  Imports.cs  Package.appxmanifest  Yoink.WinUI.csproj  Yoink.WinUI.slnx  app.manifest
tests/OddSnap.Tests/: AppCapturePolishTests.cs  AppLifecyclePolishTests.cs  AppSettingsTests.cs  AppUploadPolishTests.cs  BackgroundRuntimeJobServiceTests.cs  BitmapPerfTests.cs  CaptureOutputServiceTests.cs  CaptureSavePathTests.cs  CaptureSelectionPerformanceTests.cs  DxgiScreenCaptureTests.cs  FileNameTemplateTests.cs  GifRecorderTests.cs  HistoryServiceTests.cs  HistoryStoreTests.cs  HotkeyFormatterTests.cs  ImageSearchQueryMatcherTests.cs  InstallServiceUpdateTests.cs  LocalModelSmokeTests.cs  OcrResultWindowLifecycleTests.cs  OcrServiceTests.cs  OddSnap.Tests.csproj  OfficeExportServiceTests.cs  OverlayAccessibilityTests.cs  PerformanceInstrumentationTests.cs  PythonLauncherSelectorTests.cs  RecordingFormTests.cs  RuntimeJobFailureResolverTests.cs  RuntimeTempCleanupTests.cs  ScreenCaptureSourceTests.cs  ScreenshotPixelSamplerTests.cs  ScrollingCaptureFrameTests.cs  SettingsMediaCacheTests.cs  SettingsServiceTests.cs  SettingsWindowVisualPolishTests.cs  SketchRendererTests.cs  SoundServiceTests.cs  ToastButtonLayoutTests.cs  ToastPinPolicyTests.cs  ToastSpecTests.cs  ToastWindowLayoutTests.cs  (+10 more)
tests/Yoink.Tests/: AppSettingsTests.cs  CaptureOutputServiceTests.cs  CaptureSavePathTests.cs  FileNameTemplateTests.cs  HistoryServiceTests.cs  HotkeyFormatterTests.cs  ImageSearchQueryMatcherTests.cs  InstallServiceUpdateTests.cs  LocalModelSmokeTests.cs  OcrServiceTests.cs  PythonLauncherSelectorTests.cs  RuntimeJobFailureResolverTests.cs  SettingsServiceTests.cs  SketchRendererTests.cs  SoundServiceTests.cs  ToastPinPolicyTests.cs  ToastSpecTests.cs  ToastWindowLayoutTests.cs  ToolDefTests.cs  ToolbarLayoutTests.cs  TranslationServiceTests.cs  UploadServiceTests.cs  VideoRecorderTests.cs  WindowDetectorTests.cs  Yoink.Tests.csproj
(+282 files in other folders)
