[workspace]
resolver = "2"
members = [
    "crates/oddsnap-app",
    "crates/oddsnap-core",
    "crates/oddsnap-migrate",
    "crates/oddsnap-platform",
    "crates/oddsnap-platform-linux",
    "crates/oddsnap-platform-macos",
    "crates/oddsnap-platform-windows",
]

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/jasperdevs/odd-snap"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
gpui = { git = "https://github.com/zed-industries/zed", rev = "00a677e6cf3e1b045f2dd7db67f9e7b37ec7c7b0" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "00a677e6cf3e1b045f2dd7db67f9e7b37ec7c7b0" }
image = { version = "0.25.10", default-features = false, features = ["bmp", "jpeg", "png"] }
regex = "1.12.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[patch.crates-io]
gpui = { git = "https://github.com/zed-industries/zed", rev = "00a677e6cf3e1b045f2dd7db67f9e7b37ec7c7b0" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "warn"
