[package]
name = "oddsnap-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "oddsnap-rust"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
oddsnap-core = { path = "../oddsnap-core" }
oddsnap-migrate = { path = "../oddsnap-migrate" }
oddsnap-platform = { path = "../oddsnap-platform" }
oddsnap-platform-linux = { path = "../oddsnap-platform-linux" }
oddsnap-platform-macos = { path = "../oddsnap-platform-macos" }
oddsnap-platform-windows = { path = "../oddsnap-platform-windows" }

[target.'cfg(not(windows))'.dependencies]
global-hotkey = "0.8.0"

[dev-dependencies]
global-hotkey = "0.8.0"

[lints]
workspace = true
