[package]
name = "oddsnap-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
image.workspace = true
regex.workspace = true
rxing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
rxing = { workspace = true, features = ["encoders"] }

[lints]
workspace = true
