[package]
name = "oddsnap-migrate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
oddsnap-core = { path = "../oddsnap-core" }
rusqlite.workspace = true
serde_json.workspace = true
sha1_smol.workspace = true
thiserror.workspace = true

[lints]
workspace = true
