[package]
name = "oddsnap-platform-macos"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
oddsnap-core = { path = "../oddsnap-core" }
oddsnap-platform = { path = "../oddsnap-platform" }

[lints]
workspace = true
