[package]
name = "oddsnap-platform-macos"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
oddsnap-core = { path = "../oddsnap-core" }
oddsnap-platform = { path = "../oddsnap-platform" }

[target.'cfg(target_os = "macos")'.dependencies]
tray-icon = { version = "0.23.1", default-features = false }

[lints]
workspace = true
