[package]
name = "oddsnap-platform-windows"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
oddsnap-core = { path = "../oddsnap-core" }
oddsnap-platform = { path = "../oddsnap-platform" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32_UI_WindowsAndMessaging"] }

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
unwrap_used = "warn"
